--- a/index.html
+++ b/index.html
@@ -81,19 +81,6 @@
 
 
 <li>
-<a href="http://www.ee.tsinghua.edu.cn/zsjx/gk.htm" class="v1">招生教学</a>
-<div class="sub">
-    <a href="http://www.ee.tsinghua.edu.cn/zsjx/gk.htm" class="v2">概况</a>
-    <a href="http://www.ee.tsinghua.edu.cn/zsjx/bks/bksjxgk.htm" class="v2">本科生</a>
-    <a href="http://www.ee.tsinghua.edu.cn/zsjx/yjs/yjsjxgk.htm" class="v2">研究生</a>
-    <a href="http://www.ee.tsinghua.edu.cn/zsjx/jwxt.htm" class="v2">教务系统</a>
-</div>
-</li>
-
-
-
-
-<li>
 <a href="http://www.ee.tsinghua.edu.cn/kxyj/gk.htm" class="v1">科学研究</a>
 <div class="sub">
     <a href="http://www.ee.tsinghua.edu.cn/kxyj/gk.htm" class="v2">概况</a>
@@ -103,18 +90,6 @@
 </li>
 
 
-
-
-
-
-<li>
-<a href="http://www.ee.tsinghua.edu.cn/xssh/gk.htm" class="v1">学生生活</a>
-<div class="sub">
-    <a href="http://www.ee.tsinghua.edu.cn/xssh/gk.htm" class="v2">概况</a>
-    <a href="http://www.ee.tsinghua.edu.cn/xssh/xszz/xtw.htm" class="v2">学生组织</a>
-    <a href="http://www.ee.tsinghua.edu.cn/xssh/kyhd/whty.htm" class="v2">课余活动</a>
-</div>
-</li>
 
 
 
@@ -157,7 +132,7 @@
                         <img src="/__local/6/61/4C/E88EF0D80146006AFD8CC7F8F21_78CDE45C_2C9E.jpg?e=.jpg" alt="">
                     </div>
                     <div class="txt">
-                        <div class="top"><b>周盛</b>博士、副教授、博士生导师</div>
+                        <div class="top"><b>李浩天</b>博士生</div>
 </div>
     <div id="vsb_content" class="desc"><div class="v_news_content">
 <p class="vsbcontent_img"></p>
