--- a/index.html
+++ b/index.html
@@ -79,36 +79,6 @@
 
 
 
-
-<li>
-<a href="http://www.ee.tsinghua.edu.cn/kxyj/gk.htm" class="v1">科学研究</a>
-<div class="sub">
-    <a href="http://www.ee.tsinghua.edu.cn/kxyj/gk.htm" class="v2">概况</a>
-    <a href="http://www.ee.tsinghua.edu.cn/kxyj/sys_ktz_.htm" class="v2">实验室/课题组</a>
-    <a href="http://www.ee.tsinghua.edu.cn/kxyj/kycg/kycggk.htm" class="v2">科研成果</a>
-</div>
-</li>
-
-
-
-
-
-
-
-
-
-<li>
-<a href="http://www.ee.tsinghua.edu.cn/hzjl/kyys.htm" class="v1">合作交流</a>
-<div class="sub">
-    <a href="http://www.ee.tsinghua.edu.cn/hzjl/kyys.htm" class="v2">科研院所</a>
-    <a href="http://www.ee.tsinghua.edu.cn/hzjl/qyhz.htm" class="v2">企业合作</a>
-    <a href="http://www.ee.tsinghua.edu.cn/hzjl/dwjl.htm" class="v2">对外交流</a>
-</div>
-</li>
-
-
-
-
 </ul>
             </div>
         </div>
@@ -137,8 +107,8 @@
     <div id="vsb_content" class="desc"><div class="v_news_content">
 <p class="vsbcontent_img"></p>
 <h4><p>教育背景</p></h4>
-<p>2001.09 – 2005.07，清华大学，电子工程系，工学学士</p>
-<p>2005.09 – 2011.06，清华大学，电子工程系，工学博士</p>
+<p>2001.09 – 2005.07，河海大学，电子工程系，工学学士</p>
+<p>2005.09 – 2011.06，河海大学，电子工程系，工学博士</p>
 <h4><p>工作履历</p></h4>
 <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p>
 <p>2013.07 – 2016.06，清华大学，电子工程系，助理教授</p>
