--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p>电信大数据</p>
 <p>能源互联网</p>
 <h4><p>学术成果</p></h4>
-<p class="vsbcontent_end">访问：<a href="http://network.ee.tsinghua.edu.cn/shengzhou/pub.html">http://network.ee.tsinghua.edu.cn/shengzhou/pub.html</a></p>
+<!--  <p class="vsbcontent_end">访问：<a href="http://network.ee.tsinghua.edu.cn/shengzhou/pub.html">http://network.ee.tsinghua.edu.cn/shengzhou/pub.html</a></p> -->
 </div></div><div id="div_vote_id"></div>
                         
            
