--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
     <div id="vsb_content" class="desc"><div class="v_news_content">
 <p class="vsbcontent_img"></p>
 <h4><p>教育背景</p></h4>
-<p>2001.09 – 2005.07，河海大学，电子工程系，工学学士</p>
-<p>2005.09 – 2011.06，河海大学，电子工程系，工学博士</p>
+<p>2014.09 – 2018.06，河海大学，通信工程，工学学士</p>
+<p>2018.09 – 至今，河海大学，信息与通信工程，博士在读</p>
 <h4><p>工作履历</p></h4>
-<p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p>
-<p>2013.07 – 2016.06，清华大学，电子工程系，助理教授</p>
-<p>2016.06 – 今 , 清华大学，电子工程系，副教授</p>
+<!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p>
+
 <h4><p>研究领域</p></h4>
 <p>绿色通信与网络</p>
 <p>云架构无线接入网</p>
