--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <p>2014.09 – 2018.06，河海大学，通信工程，工学学士</p>
 <p>2018.09 – 至今，河海大学，信息与通信工程，博士在读</p>
 <h4><p>工作履历</p></h4>
-<!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p>
+<!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p> -->
 
 <h4><p>研究领域</p></h4>
 <p>绿色通信与网络</p>
