--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <!-- 版权内容请在本组件"内容配置-版权"处填写 -->
 <div style="float:left;text-align: left;    margin-right: 30px;    line-height: 26px;">
-<p>电子邮件：</p><p>联系电话：<br /></p><p>通讯地址：北京市海淀区清华大学罗姆楼，100084</p><p>版权所有©清华大学电子工程系</p>
+<p>电子邮件：lihaotian@hhu.edu.cn </p><p>联系电话：<br /></p><p>通讯地址：江苏省南京市江宁区，100084</p><p>版权所有©河海大学计算机与信息学院</p>
 </div> </div>
             </div>
         </div>
