--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
 <!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p> -->
 
 <h4><p>研究领域</p></h4>
-<p>绿色通信与网络</p>
-<p>云架构无线接入网</p>
-<p>电信大数据</p>
-<p>能源互联网</p>
+<p>车联网</p>
 <h4><p>学术成果</p></h4>
 <!--  <p class="vsbcontent_end">访问：<a href="http://network.ee.tsinghua.edu.cn/shengzhou/pub.html">http://network.ee.tsinghua.edu.cn/shengzhou/pub.html</a></p> -->
 </div></div><div id="div_vote_id"></div>
