--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <h4><p>研究领域</p></h4>
 <p>车联网</p>
-<h4><p>学术成果</p></h4>
+<!-- <h4><p>学术成果</p></h4>  -->
 <!--  <p class="vsbcontent_end">访问：<a href="http://network.ee.tsinghua.edu.cn/shengzhou/pub.html">http://network.ee.tsinghua.edu.cn/shengzhou/pub.html</a></p> -->
 </div></div><div id="div_vote_id"></div>
                         
