--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="vsb_content" class="desc"><div class="v_news_content">
 <p class="vsbcontent_img"></p>
 <h4><p>教育背景</p></h4>
-<p> font-size: 2.6rem;2014.09 – 2018.06，河海大学，通信工程，工学学士</p>
+<p> <div style="font-size: 20px;"> 2014.09 – 2018.06，河海大学，通信工程，工学学士 </div> </p>
 <p>2018.09 – 至今，河海大学，信息与通信工程，博士在读</p>
 <h4><p>工作履历</p></h4>
 <!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p> -->
@@ -67,7 +67,7 @@
 
 <!-- 版权内容请在本组件"内容配置-版权"处填写 -->
 <div style="float:left;text-align: left;    margin-right: 30px;    line-height: 26px;">
-<p>电子邮件：lihaotian@hhu.edu.cn </p><p>联系电话：<br /></p><p>通讯地址：江苏省南京市江宁区，100084</p><p>版权所有©河海大学计算机与信息学院</p>
+<p>电子邮件：lihaotian@hhu.edu.cn </p><p>联系电话：<br /></p><p>通讯地址：江苏省南京市江宁区，211100</p><p>版权所有©河海大学计算机与信息学院</p>
 </div> </div>
             </div>
         </div>
