--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <p class="vsbcontent_img"></p>
 <h4><p>教育背景</p></h4>
 <p> <div style="font-size: 10px;"> 2014.09 – 2018.06，河海大学，通信工程，工学学士 </div> </p>
-<p>2018.09 – 至今，河海大学，信息与通信工程，博士在读</p>
+<p>&nbsp; &nbsp;&nbsp;&nbsp;2018.09 – 至今，河海大学，信息与通信工程，博士在读</p>
 <h4><p>工作履历</p></h4>
 <!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p> -->
 
