--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
     <div id="vsb_content" class="desc"><div class="v_news_content">
 <p class="vsbcontent_img"></p>
 <h4><p>教育背景</p></h4>
-<p> <div style="font-size: 10px;"> 2014.09 – 2018.06，河海大学，通信工程，工学学士 </div> </p>
+<!--  <p> <div style="font-size: 10px;"> 2014.09 – 2018.06，河海大学，通信工程，工学学士 </div> </p>  -->
+<p>&nbsp; &nbsp;&nbsp;&nbsp;2018.09 – 2018.06，河海大学，信息与通信工程，工学学士</p>
 <p>&nbsp; &nbsp;&nbsp;&nbsp;2018.09 – 至今，河海大学，信息与通信工程，博士在读</p>
-<h4><p>工作履历</p></h4>
+
 <!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p> -->
 
 <h4><p>研究领域</p></h4>
-<p>车联网</p>
+<p>>&nbsp; &nbsp;&nbsp;&nbsp;车联网</p>
 <!-- <h4><p>学术成果</p></h4>  -->
 <!--  <p class="vsbcontent_end">访问：<a href="http://network.ee.tsinghua.edu.cn/shengzhou/pub.html">http://network.ee.tsinghua.edu.cn/shengzhou/pub.html</a></p> -->
 </div></div><div id="div_vote_id"></div>
