--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- <p>2011.06 - 2013.06， 清华大学，电子工程系，博士后</p> -->
 
 <h4><p>研究领域</p></h4>
-<p>>&nbsp; &nbsp;&nbsp;&nbsp;车联网</p>
+<p>&nbsp; &nbsp;&nbsp;&nbsp;车联网</p>
 <!-- <h4><p>学术成果</p></h4>  -->
 <!--  <p class="vsbcontent_end">访问：<a href="http://network.ee.tsinghua.edu.cn/shengzhou/pub.html">http://network.ee.tsinghua.edu.cn/shengzhou/pub.html</a></p> -->
 </div></div><div id="div_vote_id"></div>
